# mikata

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: pytest.yml
docs/: ARCHITECTURE.md  DEMO.md  FUTURE.md  terminal-kaomoji.txt
docs/superpowers/plans/: 2026-05-23-adhd-openclaw-pet.md
electron/: main.cjs  windowConfig.cjs  windowConfig.test.ts
openclaw_companion/: __init__.py  activity_journal.py  agent.py  ai_reactions.py  app.py  distraction.py  focus.py  kaomoji_status.py  models.py  openclaw_bridge.py  personality.py  voicevox.py
server/: index.ts  openclawRunner.test.ts  openclawRunner.ts
src/: App.tsx  styles.css
src/domain/: activity.test.ts  activity.ts  companion.test.ts  companion.ts  git.test.ts  git.ts  openclaw.test.ts  openclaw.ts  tasks.test.ts  tasks.ts  types.ts
src/viewModel/: dashboard.test.ts  dashboard.ts
tests/: test_distraction.py
